Remove `BorderedTitledPane` and refactor `MidiLevelBarsPanel`.
Deleted the unused `BorderedTitledPane` class to reduce code clutter. Refactored `MidiLevelBarsPanel` by cleaning up redundant components, enhancing code readability, and improving structure for better maintainability.